--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-awesome-alerts": "^1.0.7",
-    "react-navigation": "^2.2.1"
+    "react-native-linear-gradient": "^2.4.0",
+    "react-navigation": "^2.2.1",
+    "socket.io-client": "^2.1.1"
   }
 }
